--- a/multi-module/api/build.gradle
+++ b/multi-module/api/build.gradle
@@ -13,6 +13,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.12'
     implementation project(':core')
 }
