--- a/multi-module/core/build.gradle
+++ b/multi-module/core/build.gradle
@@ -13,7 +13,6 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-//    compile files("libs\\utils-1.3.5.jar")
+    testImplementation 'junit:junit:4.12'
     compile('com.epam:utils:1.3.5')
 }
