--- a/multi-module/core/build.gradle
+++ b/multi-module/core/build.gradle
@@ -14,5 +14,5 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-    compile('com.epam:utils:1.3.5')
+    implementation 'com.epam:utils:1.3.5'
 }
