changes via demo

--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -17,12 +17,14 @@ publishing {
     }
 }
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+
+
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 jar {
     manifest {
-        attributes("Implementation-Title": "utils",
+        attributes("Implementation-Title": rootProject.name,
                 "Implementation-Version": archiveVersion)
     }
 }
