--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'war'
 }
 
 group 'com.epam'
@@ -16,5 +17,10 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     implementation 'org.springframework:spring-context:5.0.5.RELEASE'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+    implementation 'org.springframework:spring-webmvc:5.0.5.RELEASE'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.10.1'
+    implementation 'javax.servlet:javax.servlet-api:3.0.1'
+
     implementation project(':core')
 }
