--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -14,7 +14,7 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'junit:junit:4.12'
     implementation 'org.springframework:spring-context:5.0.5.RELEASE'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
