--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -15,4 +15,6 @@ repositories {
 dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'mysql:mysql-connector-java:8.0.12'
+    implementation 'org.springframework:spring-jdbc:5.0.5.RELEASE'
+
 }
