--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -13,8 +13,16 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework:spring-context:5.0.5.RELEASE'
+    implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+
     testImplementation 'junit:junit:4.12'
     implementation 'mysql:mysql-connector-java:8.0.12'
     implementation 'org.springframework:spring-jdbc:5.0.5.RELEASE'
 
+
+    implementation 'com.zaxxer:HikariCP:3.4.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
 }
