--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -25,4 +25,6 @@ dependencies {
     implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
+
+    implementation project(":core")
 }
