--- a/giftcertificates/build.gradle
+++ b/giftcertificates/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'java'
 }
 
-group 'com.epam'
+group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
