--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -3,18 +3,25 @@ plugins {
     id "io.freefair.lombok" version "5.2.1"
 }
 
-group 'com.epam'
+group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
     implementation 'org.springframework:spring-context:5.0.5.RELEASE'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+    testImplementation 'junit:junit:4.12'
+    implementation 'mysql:mysql-connector-java:8.0.12'
+    implementation 'org.springframework:spring-jdbc:5.0.5.RELEASE'
+
+    implementation 'com.zaxxer:HikariCP:3.4.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
+
+    implementation project(":api")
 }
