--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id "com.github.sahara3.tomcat-runner" version "0.2.1"
 }
 
-group 'com.epam'
+group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -24,6 +24,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.10.1'
     implementation 'javax.servlet:javax.servlet-api:3.0.1'
 
-    implementation project(':core')
     implementation project(':api')
+    implementation project(':core')
 }
