--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -13,11 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-context:5.0.5.RELEASE'
-
     testImplementation 'junit:junit:4.12'
     implementation 'mysql:mysql-connector-java:8.0.12'
-    implementation 'org.springframework:spring-jdbc:5.0.5.RELEASE'
+    implementation "org.springframework:spring-jdbc:${springVersion}"
 
     implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
