--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id "com.github.sahara3.tomcat-runner" version "0.2.1"
 }
 
+
 group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
@@ -17,10 +18,8 @@ repositories {
 
 dependencies {
     testImplementation 'junit:junit:4.12'
-    implementation 'org.springframework:spring-context:5.0.5.RELEASE'
 
-
-    implementation 'org.springframework:spring-webmvc:5.0.5.RELEASE'
+    implementation "org.springframework:spring-webmvc:${springVersion}"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.10.1'
     implementation 'javax.servlet:javax.servlet-api:3.0.1'
 
