--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -15,6 +15,6 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:${junitVersion}"
     api "org.springframework:spring-context:${springVersion}"
 }
