--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -6,14 +6,14 @@ plugins {
 group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:${junitVersion}"
     implementation 'mysql:mysql-connector-java:8.0.12'
     implementation "org.springframework:spring-jdbc:${springVersion}"
 
