--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -17,7 +17,7 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'junit:junit:4.12'
+    testImplementation "junit:junit:${junitVersion}"
 
     implementation "org.springframework:spring-webmvc:${springVersion}"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.10.1'
