--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -14,8 +14,9 @@ repositories {
 
 dependencies {
     testImplementation "junit:junit:${junitVersion}"
-    implementation 'mysql:mysql-connector-java:8.0.12'
+//    implementation 'mysql:mysql-connector-java:8.0.12'
     implementation "org.springframework:spring-jdbc:${springVersion}"
+    compile 'org.postgresql:postgresql:42.2.18'
 
     implementation 'com.zaxxer:HikariCP:3.4.5'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
