--- a/giftcertificates/core/src/main/resources/persistence.properties
+++ b/giftcertificates/core/src/main/resources/persistence.properties
@@ -1,4 +1,4 @@
-jdbc.driverClassName=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/giftcertificates?serverTimezone=Europe/Minsk
-jdbc.username=root
-jdbc.password=pass
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/giftcertificates?serverTimezone=Europe/Minsk
+jdbc.username=postgres
+jdbc.password=admin
