--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -22,5 +22,10 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
 
+
+    implementation 'org.slf4j:slf4j-api:1.7.2'
+    implementation 'ch.qos.logback:logback-classic:1.0.9'
+    implementation 'ch.qos.logback:logback-core:1.0.9'
+
     implementation project(":api")
 }
