--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java'
     id 'war'
     id "io.freefair.lombok" version "5.2.1"
-    id "com.github.sahara3.tomcat-runner" version "0.2.1"
+    id "com.bmuschko.tomcat-base" version "2.5"
+    id "com.bmuschko.tomcat" version "2.5"
+
 }
 
 
@@ -25,4 +27,15 @@ dependencies {
 
     implementation project(':api')
     implementation project(':core')
+
+    def tomcatVersion = '7.0.76'
+    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
+            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
+}
+
+ext{
+    tomcat {
+        contextPath = '/'
+    }
 }
