--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     api 'ch.qos.logback:logback-classic:1.0.9'
     api 'ch.qos.logback:logback-core:1.0.9'
 
+    implementation 'org.apache.lucene:lucene-queryparser:8.7.0'
+
     implementation project(":api")
 }
