--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -16,4 +16,7 @@ repositories {
 dependencies {
     testImplementation "junit:junit:${junitVersion}"
     api "org.springframework:spring-context:${springVersion}"
+
+    api "org.springframework:spring-webmvc:${springVersion}"
+    api 'javax.servlet:javax.servlet-api:3.0.1'
 }
