--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -9,11 +9,11 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
+    jcenter()
     mavenCentral()
 }
 
 dependencies {
-    testImplementation "junit:junit:${junitVersion}"
 //    implementation 'mysql:mysql-connector-java:8.0.12'
     implementation "org.springframework:spring-jdbc:${springVersion}"
     implementation 'org.postgresql:postgresql:42.2.18'
@@ -29,4 +29,22 @@ dependencies {
     implementation 'org.apache.lucene:lucene-queryparser:8.7.0'
 
     implementation project(":api")
+
+
+    testImplementation "org.springframework:spring-test:${springVersion}"
+    testImplementation 'org.mockito:mockito-core:3.6.0'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
+
+    testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.0'
+
+    testImplementation 'com.h2database:h2:1.4.200'
+
+
+}
+
+test {
+    useJUnitPlatform()
 }
