problems with searching resolved

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -7,6 +7,7 @@ certificate.wrong-duration=Duration is wrong
 certificate.wrong-id=Id is wrong
 certificate.wrong-name=Name is wrong
 certificate.wrong-price=Price is wrong.
+sort.wrong-sort=Wrong sort parameters
 tag.exists=Tag already exists with name
 tag.not-found-id=Tag not found with id
 tag.wrong-id=Id is wrong.
