--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -1,4 +1,5 @@
 certificate.exists=Gift certificate aldready exists
+certificate.name-exists=Gift certificate with so name already exists
 certificate.not-found-id=GiftCertificate not found by id
 certificate.null=GiftCertificate is null
 certificate.unexpected.cant-update=Unexpected exception during modification of giftcertificate
