some comments are deleted

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -9,8 +9,8 @@ certificate.wrong-id=Id is wrong
 certificate.wrong-name=Name is wrong
 certificate.wrong-price=Price is wrong.
 sort.wrong-sort=Wrong sort parameters
-tag.exists=Tag already exists with name
-tag.not-found-id=Tag not found with id
+tag.exists=Tag already exists with such name
+tag.not-found-id=Tag not found with such id
 tag.wrong-id=Id is wrong.
 tag.wrong-name=Tag name is wrong.
 unexpected.error=Unexpected server error
