--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -8,9 +8,17 @@ certificate.wrong-duration=Duration is wrong
 certificate.wrong-id=Id is wrong
 certificate.wrong-name=Name is wrong
 certificate.wrong-price=Price is wrong.
+media-not-acceptable=Media not acceptable
+media-not-supported=Method not supported for such url
+method-argument-not-valid=Method argument not valid
+method-not-allowed=Method not allowed for such url
+missing-path-variable=Missing path variable
+missing-servlet-request-param=Missing servlet request parameter
+not-readable=Message not readable
 sort.wrong-sort=Wrong sort parameters
 tag.exists=Tag already exists with such name
 tag.not-found-id=Tag not found with such id
 tag.wrong-id=Id is wrong.
 tag.wrong-name=Tag name is wrong.
+type-mismatch=Type mismatch exception
 unexpected.error=Unexpected server error
