--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
     id 'java'
     id 'java-library'
 }
@@ -12,12 +14,15 @@ targetCompatibility = JavaVersion.VERSION_1_8
 repositories {
     mavenCentral()
 }
-
 dependencies {
-    api "org.springframework:spring-context:${springVersion}"
+    api 'org.springframework.boot:spring-boot-starter-data-jpa'
+    api 'org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6'
+    api 'org.springframework.boot:spring-boot-starter-web'
+    annotationProcessor('org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6')
+//    api "org.springframework:spring-context:${springVersion}"
 
-    api "org.springframework:spring-webmvc:${springVersion}"
-    api 'javax.servlet:javax.servlet-api:3.0.1'
+//    api "org.springframework:spring-webmvc:${springVersion}"
+//    api 'javax.servlet:javax.servlet-api:3.0.1'
 
     api 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
