--- a/giftcertificates/build.gradle
+++ b/giftcertificates/build.gradle
@@ -1,5 +1,11 @@
 plugins {
+    id 'org.springframework.boot' version '2.2.6.RELEASE'
+    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
+}
+
+bootJar {
+    mainClassName = 'cpm.epam.mjc.Application'
 }
 
 group 'com.epam.mjc'
