--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -1,6 +1,13 @@
 plugins {
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
     id 'java'
     id 'java-library'
+}
+
+
+bootJar {
+    mainClassName = 'cpm.epam.mjc.Application'
 }
 
 group 'com.epam.mjc'
@@ -14,28 +21,35 @@ repositories {
 }
 
 dependencies {
-    implementation "org.springframework:spring-jdbc:${springVersion}"
-    implementation 'org.postgresql:postgresql:42.2.18'
 
+    implementation('org.springframework.boot:spring-boot-starter-jdbc')
+    implementation 'org.postgresql:postgresql:42.2.18'
+//    implementation "org.springframework:spring-jdbc:${springVersion}"
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+    annotationProcessor('org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6')
     implementation 'com.zaxxer:HikariCP:3.4.5'
 
-    api 'org.slf4j:slf4j-api:1.7.2'
-    api 'ch.qos.logback:logback-classic:1.0.9'
-    api 'ch.qos.logback:logback-core:1.0.9'
+//    api 'org.slf4j:slf4j-api:1.7.2'
+//    api 'ch.qos.logback:logback-classic:1.0.9'
+//    api 'ch.qos.logback:logback-core:1.0.9'
+
+//    api 'org.springframework.boot:spring-boot-starter-slf4j'
+    api 'org.springframework.boot:spring-boot-starter-logging:2.4.0'
 
     implementation 'org.apache.lucene:lucene-queryparser:8.7.0'
 
     implementation project(":api")
 
 
-    testImplementation "org.springframework:spring-test:${springVersion}"
-    testImplementation 'org.mockito:mockito-core:3.6.0'
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
 
+    testImplementation 'org.mockito:mockito-core:3.6.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
-
     testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
-    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.0'
+//    testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.0'
 
     testImplementation 'com.h2database:h2:1.4.200'
 
