--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -1,4 +1,6 @@
 plugins {
+    id 'org.springframework.boot'
+    id 'io.spring.dependency-management'
     id 'java'
     id 'war'
     id "com.bmuschko.tomcat-base" version "2.5"
@@ -7,6 +9,13 @@ plugins {
 }
 
 
+bootJar {
+    mainClassName = 'cpm.epam.mjc.Application'
+}
+
+bootWar {
+    mainClassName = 'cpm.epam.mjc.Application'
+}
 group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
