user service ready

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -22,3 +22,4 @@ tag.wrong-id=Id is wrong.
 tag.wrong-name=Tag name is wrong.
 type-mismatch=Type mismatch exception
 unexpected.error=Unexpected server error
+user.not-found=User not found with such id
