--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -14,6 +14,11 @@ targetCompatibility = JavaVersion.VERSION_1_8
 repositories {
     mavenCentral()
 }
+
+bootJar {
+    mainClassName = 'cpm.epam.mjc.Application'
+}
+
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6'
