order service not completed

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -2,7 +2,6 @@ certificate.exists=Gift certificate aldready exists
 certificate.name-exists=Gift certificate with so name already exists
 certificate.not-found-id=GiftCertificate not found by id
 certificate.null=GiftCertificate is null
-certificate.unexpected.cant-update=Unexpected exception during modification of giftcertificate
 certificate.wrong-description=Description is wrong
 certificate.wrong-duration=Duration is wrong
 certificate.wrong-id=Id is wrong
@@ -15,6 +14,8 @@ method-not-allowed=Method not allowed for such url
 missing-path-variable=Missing path variable
 missing-servlet-request-param=Missing servlet request parameter
 not-readable=Message not readable
+order.not-fount=Order not found with such id
+order.wrong-id=Wrong order id
 sort.wrong-sort=Wrong sort parameters
 tag.exists=Tag already exists with such name
 tag.not-found-id=Tag not found with such id
@@ -23,3 +24,4 @@ tag.wrong-name=Tag name is wrong.
 type-mismatch=Type mismatch exception
 unexpected.error=Unexpected server error
 user.not-found=User not found with such id
+user.wrong-id=Id of user is wrong
