all rest methods created

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -14,6 +14,7 @@ method-not-allowed=Method not allowed for such url
 missing-path-variable=Missing path variable
 missing-servlet-request-param=Missing servlet request parameter
 not-readable=Message not readable
+order.empty-gift-certificates=Gift certificates can't be empty
 order.not-fount=Order not found with such id
 order.wrong-id=Wrong order id
 sort.wrong-sort=Wrong sort parameters
