--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -19,6 +19,7 @@ order.not-fount=Order not found with such id
 order.wrong-id=Wrong order id
 sort.wrong-sort=Wrong sort parameters
 tag.exists=Tag already exists with such name
+tag.mapper-list=Wrong tag names parameter
 tag.not-found-id=Tag not found with such id
 tag.wrong-id=Id is wrong.
 tag.wrong-name=Tag name is wrong.
