--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -17,6 +17,7 @@ not-readable=Message not readable
 order.empty-gift-certificates=Gift certificates can't be empty
 order.not-fount=Order not found with such id
 order.wrong-id=Wrong order id
+pagination.wrong-parameters=Wrong pagination parameters
 sort.wrong-sort=Wrong sort parameters
 tag.exists=Tag already exists with such name
 tag.mapper-list=Wrong tag names parameter
