complex primary key works now

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -1,5 +1,6 @@
 certificate.exists=Gift certificate aldready exists
 certificate.name-exists=Gift certificate with so name already exists
+certificate.not-found-by-name=Gift certificate not found with such name
 certificate.not-found-id=GiftCertificate not found by id
 certificate.null=GiftCertificate is null
 certificate.wrong-description=Description is wrong
@@ -15,9 +16,15 @@ missing-path-variable=Missing path variable
 missing-servlet-request-param=Missing servlet request parameter
 not-readable=Message not readable
 order.empty-gift-certificates=Gift certificates can't be empty
+order.missed-id-name=Missed id and name properties
 order.not-fount=Order not found with such id
+order.wrong-count=Count can't be less than 1
 order.wrong-id=Wrong order id
 pagination.wrong-parameters=Wrong pagination parameters
+purchase.null=Purchase certificate is null
+purchase.wrong-count=Wrong count of purchase certificate
+purchase.wrong-old-name=Old name is wrong
+purchase.wrong-price-for-one=Wrong price for one purchace certificate
 sort.wrong-sort=Wrong sort parameters
 tag.exists=Tag already exists with such name
 tag.mapper-list=Wrong tag names parameter
