--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     api 'org.springframework.boot:spring-boot-starter-web'
     annotationProcessor('org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6')
 
+    api "org.springframework.boot:spring-boot-starter-hateoas"
     api 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
 
