--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -1,13 +1,13 @@
-certificate.exists=Gift certificate aldready exists
-certificate.name-exists=Gift certificate with so name already exists
-certificate.not-found-by-name=Gift certificate not found with such name
-certificate.not-found-id=GiftCertificate not found by id
+certificate.exists=Gift certificate aldready exists(name = {0})
+certificate.name-exists=Gift certificate with so name already exists(name = {0})
+certificate.not-found-by-name=Gift certificate not found with such name(name = {0})
+certificate.not-found-id=GiftCertificate not found by id (id = {0})
 certificate.null=GiftCertificate is null
-certificate.wrong-description=Description is wrong
-certificate.wrong-duration=Duration is wrong
-certificate.wrong-id=Id is wrong
-certificate.wrong-name=Name is wrong
-certificate.wrong-price=Price is wrong.
+certificate.wrong-description=Description is wrong (description = {0})
+certificate.wrong-duration=Duration is wrong (duration = {0})
+certificate.wrong-id=Id is wrong (id = {0})
+certificate.wrong-name=Name is wrong (name = {0})
+certificate.wrong-price=Price is wrong (price = {0})
 media-not-acceptable=Media not acceptable
 media-not-supported=Method not supported for such url
 method-argument-not-valid=Method argument not valid
@@ -15,23 +15,24 @@ method-not-allowed=Method not allowed for such url
 missing-path-variable=Missing path variable
 missing-servlet-request-param=Missing servlet request parameter
 not-readable=Message not readable
-order.empty-gift-certificates=Gift certificates can't be empty
+order.empty-gift-certificates=Gift certificates can not be empty
 order.missed-id-name=Missed id and name properties
-order.not-fount=Order not found with such id
-order.wrong-count=Count can't be less than 1
-order.wrong-id=Wrong order id
-pagination.wrong-parameters=Wrong pagination parameters
+order.not-fount=Order not found with such id (id = {0})
+order.wrong-count=Count can not be less than 1 or null (count = {0})
+order.wrong-id=Wrong order id (id = {0})
+pagination.wrong-parameters=Wrong pagination parameters (pageNumber = {0}, pageSize = {1})
 purchase.null=Purchase certificate is null
-purchase.wrong-count=Wrong count of purchase certificate
-purchase.wrong-old-name=Old name is wrong
-purchase.wrong-price-for-one=Wrong price for one purchace certificate
-sort.wrong-sort=Wrong sort parameters
-tag.exists=Tag already exists with such name
-tag.mapper-list=Wrong tag names parameter
-tag.not-found-id=Tag not found with such id
-tag.wrong-id=Id is wrong.
-tag.wrong-name=Tag name is wrong.
+purchase.wrong-count=Wrong count of purchase certificate (count = {0})
+purchase.wrong-old-name=Old name is wrong (name = {0})
+purchase.wrong-price-for-one=Wrong price for one purchace certificate (price = {0})
+sort.wrong-sort=Wrong sort parameters (sort = {0})
+sort.wrong-sort.asc=Wrong sort parameters (asc = {0})
+tag.exists=Tag already exists with such name (name = {0})
+tag.mapper-list=Wrong tag names parameter (tagName = {0})
+tag.not-found-id=Tag not found with such id (id = {0})
+tag.wrong-id=Id is wrong (id = {0})
+tag.wrong-name=Tag name is wrong (name = {0})
 type-mismatch=Type mismatch exception
 unexpected.error=Unexpected server error
-user.not-found=User not found with such id
-user.wrong-id=Id of user is wrong
+user.not-found=User not found with such id (id = {0})
+user.wrong-id=Id of user is wrong (id = {0})
