--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -35,18 +35,11 @@ dependencies {
     implementation project(":api")
 
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-    }
-
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation 'org.mockito:mockito-core:3.6.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
 
     testImplementation 'com.h2database:h2:1.4.200'
-
-
 }
 
 test {
