--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -18,6 +18,9 @@ repositories {
 bootJar {
     mainClassName = 'cpm.epam.mjc.Application'
 }
+jar {
+    enabled = true
+}
 
 dependencies {
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
