to jpa repositories

--- a/giftcertificates/web/src/main/resources/application.properties
+++ b/giftcertificates/web/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+jdbc.driverClassName=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/giftcertificates?serverTimezone=Europe/Minsk
+jdbc.username=postgres
+jdbc.password=admin
+
+jwt.secret=lkjlkjJJJiii
+password.secret=alkdjfgirldk
+
 spring.jpa.show-sql=true
