--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -32,6 +32,8 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
 
+    api 'org.springframework.boot:spring-boot-starter-security'
+
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
