--- a/giftcertificates/core/build.gradle
+++ b/giftcertificates/core/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     annotationProcessor('org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6')
     implementation 'com.zaxxer:HikariCP:3.4.5'
 
+
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
     api 'org.springframework.boot:spring-boot-starter-logging:2.4.0'
 
     implementation 'org.apache.lucene:lucene-queryparser:8.7.0'
