--- a/authorization/web/src/main/resources/application.properties
+++ b/authorization/web/src/main/resources/application.properties
@@ -2,8 +2,8 @@ jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/giftcertificates?serverTimezone=Europe/Minsk
 jdbc.username=postgres
 jdbc.password=admin
-
 spring.jpa.show-sql=true
 jwt.secret=lkjlkjJJJiii
 password.secret=alkdjfgirldk
 spring.jpa.properties.hibernate.jdbc.batch_size=50
+server.port=9000
