--- a/authorization/core/build.gradle
+++ b/authorization/core/build.gradle
@@ -20,20 +20,19 @@ repositories {
     mavenCentral()
 }
 
+
+ext {
+    set('springCloudVersion', "Greenwich.SR2")
+}
+
 dependencies {
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+
 
     implementation('org.springframework.boot:spring-boot-starter-jdbc')
     implementation 'org.postgresql:postgresql:42.2.18'
-    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     annotationProcessor('org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6')
     implementation 'com.zaxxer:HikariCP:3.4.5'
-
-
-    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
-    api 'org.springframework.boot:spring-boot-starter-logging:2.4.0'
-
-    implementation 'org.apache.lucene:lucene-queryparser:8.7.0'
 
     implementation project(":api")
 
@@ -43,6 +42,12 @@ dependencies {
     testImplementation 'org.mockito:mockito-junit-jupiter:3.6.0'
 
     testImplementation 'com.h2database:h2:1.4.200'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
 
 test {
