--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -23,6 +23,10 @@ jar {
 }
 
 dependencies {
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+
+
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
     api 'org.hibernate:hibernate-jpamodelgen:6.0.0.Alpha6'
     api 'org.springframework.boot:spring-boot-starter-web'
@@ -32,9 +36,15 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.8'
 
-    api 'org.springframework.boot:spring-boot-starter-security'
+//    api 'org.springframework.boot:spring-boot-starter-security'
 
     implementation "org.mapstruct:mapstruct:${mapstructVersion}"
 
     annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
