--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -24,6 +24,16 @@ repositories {
 }
 
 dependencies {
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+
+
     implementation project(':api')
     implementation project(':core')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
 }
