--- a/giftcertificates/api/build.gradle
+++ b/giftcertificates/api/build.gradle
@@ -24,7 +24,7 @@ jar {
 
 dependencies {
 
-    implementation 'org.springframework.cloud:spring-cloud-starter-oauth2'
+    implementation "org.springframework.cloud:spring-cloud-starter-oauth2"
 
 
     api 'org.springframework.boot:spring-boot-starter-data-jpa'
