duplicated tags resolved

--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -1,3 +1,4 @@
+certificate.duplicated-tags=Tag names are duplicated (names = {0})
 certificate.exists=Gift certificate aldready exists(name = {0})
 certificate.name-exists=Gift certificate with so name already exists(name = {0})
 certificate.not-found-by-name=Gift certificate not found with such name(name = {0})
