--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -9,6 +9,7 @@ certificate.wrong-duration=Duration is wrong (duration = {0})
 certificate.wrong-id=Id is wrong (id = {0})
 certificate.wrong-name=Name is wrong (name = {0})
 certificate.wrong-price=Price is wrong (price = {0})
+forbidden=Resource is forbidden
 media-not-acceptable=Media not acceptable
 media-not-supported=Method not supported for such url
 method-argument-not-valid=Method argument not valid
@@ -34,6 +35,7 @@ tag.not-found-id=Tag not found with such id (id = {0})
 tag.wrong-id=Id is wrong (id = {0})
 tag.wrong-name=Tag name is wrong (name = {0})
 type-mismatch=Type mismatch exception
+unauthorized=Unauthorized request
 unexpected.error=Unexpected server error
 user.not-found=User not found with such id (id = {0})
 user.null=User is null
