--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -9,8 +9,6 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
     "react": "^17.0.1",
@@ -43,5 +41,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^16.9.10"
   }
 }
