--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -11,6 +11,8 @@
     "@types/node": "^12.0.0",
     "@types/react-router-dom": "^5.1.7",
     "axios": "^0.21.1",
+    "bootstrap": "^4.5.3",
+    "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
