--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -17,6 +17,7 @@
     "query-string": "^6.13.8",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
