run command line

--- a/authorization/api/build.gradle
+++ b/authorization/api/build.gradle
@@ -16,8 +16,9 @@ repositories {
 }
 
 bootJar {
-    mainClassName = 'cpm.epam.mjc.Application'
+    enabled = false
 }
+
 jar {
     enabled = true
 }
