--- a/authorization/core/build.gradle
+++ b/authorization/core/build.gradle
@@ -7,7 +7,11 @@ plugins {
 
 
 bootJar {
-    mainClassName = 'com.epam.mjc.Application'
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
 
 group 'com.epam.mjc'
