--- a/giftcertificates/build.gradle
+++ b/giftcertificates/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 bootJar {
-    mainClassName = 'cpm.epam.mjc.Application'
+    mainClassName = 'com.epam.mjc.Application'
 }
 
 group 'com.epam.mjc'
