--- a/giftcertificates/core/src/main/resources/message.properties
+++ b/giftcertificates/core/src/main/resources/message.properties
@@ -41,5 +41,6 @@ user.not-found=User not found with such id (id = {0})
 user.null=User is null
 user.username-exists=User already exists (username = {0})
 user.wrong-id=Id of user is wrong (id = {0})
+user.wrong-name=Name is wrong (name = {0})
 user.wrong-password=Password is wrong
 user.wrong-username=Username is wrong (username = {0})
