--- a/giftcertificates/web/build.gradle
+++ b/giftcertificates/web/build.gradle
@@ -2,18 +2,13 @@ plugins {
     id 'org.springframework.boot'
     id 'io.spring.dependency-management'
     id 'java'
-    id 'war'
 }
 
 group 'com.epam.mjc'
 version '1.0-SNAPSHOT'
 
 bootJar {
-    mainClassName = 'cpm.epam.mjc.Application'
-}
-
-bootWar {
-    mainClassName = 'cpm.epam.mjc.Application'
+    mainClassName = 'com.epam.mjc.Application'
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
