--- a/authorization/web/src/main/resources/application.properties
+++ b/authorization/web/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 jdbc.driverClassName=org.postgresql.Driver
-jdbc.url=jdbc:postgresql://localhost:5432/giftcertificates?serverTimezone=Europe/Minsk
-jdbc.username=postgres
-jdbc.password=admin
+jdbc.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/giftcertificates?serverTimezone=Europe/Minsk}
+jdbc.username=${SPRING_DATASOURCE_USERNAME:postgres}
+jdbc.password=${SPRING_DATASOURCE_PASSWORD:admin}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.batch_size=50
 server.port=9000
